--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="preload">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="preload">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="preload" as="style">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="preload" as="style">
   </body>
 </html>
