--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </head>
   <body>
     <div id="root"></div>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <div id="confirm-modal">
+
+    </div>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
   </body>
 </html>
