--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       }
     </style>
     <meta charset="utf-8">
-    <title>React app</title>
+    <title>Excise Portal</title>
   </head>
   <body>
     <div id="root"></div>
