socket.io script

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 
     </div>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.slim.js"></script>
   </body>
 </html>
