--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpG-NeL-XGYAduQul2JenVr86HIPITEso&sensor=false&libraries=geometry,drawing&ext=.js" charset="utf-8"></script>
     <script async src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.slim.js"></script>
   </body>
 </html>
