--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         box-sizing: border-box;
         margin: 0;
         padding: 0;
+        font-family: 'IBM Plex Sans', sans-serif;
       }
     </style>
     <meta charset="utf-8">
@@ -16,9 +17,10 @@
     <div id="confirm-modal">
 
     </div>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpG-NeL-XGYAduQul2JenVr86HIPITEso&sensor=false&libraries=geometry,drawing&ext=.js" charset="utf-8"></script>
-    <script async src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.slim.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,500,600" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet"> -->
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpG-NeL-XGYAduQul2JenVr86HIPITEso&sensor=false&libraries=geometry,drawing&ext=.js" charset="utf-8"></script>
+    <!-- <script async src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.slim.js"></script> -->
   </body>
 </html>
