--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         font-family: 'IBM Plex Sans', sans-serif;
       }
     </style>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Excise Portal</title>
   </head>
   <body>
