--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style media="screen">
-      * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-        font-family: 'IBM Plex Sans', sans-serif;
-      }
-    </style>
-    <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Excise Portal</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <div id="confirm-modal">
 
-    </div>
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,500,600" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+<head>
+  <style media="screen">
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'IBM Plex Sans', sans-serif;
+    }
+  </style>
+  <meta charset="UTF-8">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon"
+    href="https://daks2k3a4ib2z.cloudfront.net/59a41c353e53e400017cc923/59c2876224c8c60001616d35_For%20Webflow-01.png">
+  <title>Excise Portal</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <div id="confirm-modal">
+
+  </div>
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,500,600" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet"> -->
-   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpG-NeL-XGYAduQul2JenVr86HIPITEso&sensor=false&libraries=geometry,drawing&ext=.js" charset="utf-8"></script> -->
-    <!-- <script async src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.slim.js"></script> -->
-  </body>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpG-NeL-XGYAduQul2JenVr86HIPITEso&sensor=false&libraries=geometry,drawing&ext=.js" charset="utf-8"></script> -->
+  <!-- <script async src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.slim.js"></script> -->
+</body>
+
 </html>
