--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon"
-    href="https://daks2k3a4ib2z.cloudfront.net/59a41c353e53e400017cc923/59c2876224c8c60001616d35_For%20Webflow-01.png">
+    href="https://res.cloudinary.com/www-hipbar-com/image/upload/c_scale,h_32,w_32/v1562662079/LiveRed_fav_icon_PNG.png">
   <title>Excise Portal</title>
 </head>
 
